# experiments_with_rag

./: .gitignore  READ_ME.md  pyproject.toml  pytest.ini  requirements.lock.txt  tasks.py
notebooks/: reader.ipynb
src/: config.py
src/lib/: append_jsonl_entry.py  append_to_file.py  clean_text.py  create_meta_data.py  document_loader.py  expand_question.py  file_handler.py  keyword_search.py  pdf_handler.py  test_clean_text.py  test_expand_question.py  test_keyword_search.py  test_pdf_handler.py  test_text_handler.py  text_file.py  txt_handler.py
