[project]
name = "my-rag-project"
version = "0.1.0"
description = "Local document embedding and retrieval pipeline"
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate",
    "sentence-transformers",
    "transformers",
    "torch",
    "scikit-learn",
    "pandas",
    "numpy<2",
    "pypdf",
    "pdf2image",
    "pytesseract",
    "fastparquet",
    "beautifulsoup4",
    "nltk",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "pytest-watch",
]

[tool.pytest.ini_options]
python_files = "**/test_*.py"
addopts = "--tb=short -q"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
